# aide-autodoc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bump-version.sh  release.sh
.github/scripts/: setup-rulesets.sh
.github/workflows/: ci.yml  release.yml
aide-autodoc/: Cargo.toml
aide-autodoc/examples/: basic_usage.rs  full_app.rs  no_docs.rs
aide-autodoc/src/: lib.rs
aide-autodoc/tests/: integration.rs  skeleton_smoke.rs  trybuild.rs
aide-autodoc/tests/trybuild/pass/: multi_paragraph.rs  no_doc.rs  simple.rs  with_extractors.rs
examples/: Cargo.toml  README.md
examples/examples/: multi_paragraph.rs
