[workspace]
resolver = "2"
members = ["aide-autodoc"]

[workspace.package]
edition = "2024"
version = "0.2.0"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/remysaissy/aide-autodoc.git"
authors = ["Rémy Saissy <remy.saissy@gmail.com>"]
readme = "README.md"
categories = ["development-tools::procedural-macro-helpers", "web-programming"]
keywords = ["aide", "axum", "openapi", "macro", "documentation"]

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
